--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
+    text-align: center;
+    background-color:  #fffdfe88.    ;
   }
   
-  tr:nth-child(even) {
-    background-color: #dddddd;
-  }
+
 
   body {
     background-image: url('images/background.png');
@@ -21,24 +21,42 @@
   text-align: center;
   }
 
+
   form {
-  
-    background-color: red;
-    width: 15%;
+    text-align: center;
+    opacity: 0.9;
+    background-color: #5d4b7696;
+    width: 10%;
     padding: 80px;
     border-radius: 10px;
     position: absolute;
-    top: 250px;
-    left: 150px;
+    top: 138px;
+    left: 106px;
+    font-size: 25px;
   }
+
 
   table {
 
-    background-color: aqua;
+    background-color: #5d4b7696;
     padding: 80px;
     border-radius: 10px;
     float: right;
     position: absolute;
     top: 250px;
+    width: 30%;
+    opacity: 0.9;
     right: 150px;
+  }
+
+  form input {
+width: 100%;
+font-size: 25px;
+border-radius: 5px;
+  }
+
+  form select {
+    width: 90%;
+font-size: 25px;
+border-radius: 5px;
   }
